Feature/13 missing functionality (#20)
* Added ListCommand, support for profile file, DeleteCommand, recursive operations, require read password
* Updated documentation and requirements 
* Removed support to decode base64-encoded passwords 

Co-authored-by: Christoph Pirkl <christoph.pirkl@exasol.com>